# 07.04.2025--OPEN-SDK

Saqib-Working/: agents (1).py  imp (1).docx  requirements (1).txt  v1_basic_agent (1).py  v1_basic_agent.py  v2_structured_output (1).py  v2_structured_output.py  v3_tool_calls (1).py  v3_tool_calls.py  v4_handoffs (1).py  v5_guardrails_and_context (1).py  v5_guardrails_and_context.py
helloworld/: pyproject.toml
helloworld/src/helloworld/: __init__.py
