[project]
name = "helloworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shahid rafiq", email = "shahidrafiq06@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
helloworld = "helloworld:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
